--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,13 @@
 body{
 font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
-background:#643d87 url(/img/fundo.jpg) no-repeat top center;
+background:linear-gradient( #ce951ac7, #fa0e70) ;
+
+height: 100%;
+margin: 0;
+background-repeat: no-repeat;
+background-attachment: fixed;
+
 }
 
 #container{
@@ -44,4 +50,13 @@ input.email{
 
 input.senha{
     background-image: url(/img/icone-cadeado.png)  ;
+}
+input.submit{
+      color: #fff;
+      background-color: #f79300;
+      border: 2px solid #db7d00;
+      padding: 5px 20px;
+      height: 45px;
+      width: 90%;
+      background:linear-gradient(to bottom, #faa600, #f68a00);
 }
