--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 body{
 font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
-background:linear-gradient( #ce951ac7, #fa0e70) ;
+background:linear-gradient( #1e09dbc7, #da0303) ;
 
 height: 100%;
 margin: 0;
